objects/TEX__c.object
<CustomObject>
    <fields>
        <fullName>REP_LineofBusiness__c</fullName>
        <formula>LineofBusiness__c</formula>
        <label>REP Line of Business Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reasonfornotdeliverreportontime__c</fullName>
        <label>Reason for not deliver report on time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Engineering Capacity</fullName>
                </value>
                <value>
                    <fullName>Part Return Delay</fullName>
                </value>
                <value>
                    <fullName>Customer Induced</fullName>
                </value>
                <value>
                    <fullName>Vendor Analysis Needed</fullName>
                </value>
                <value>
                    <fullName>Report Delivery Delay</fullName>
                </value>
                <value>
                    <fullName>R&amp;D/Factory Testing Required</fullName>
                </value>
                <value>
                    <fullName>Missing FSE Documentation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReceiveAutomaticEmailToCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Notifications to customers will only be sent in English</inlineHelpText>
        <label>Receive Automatic Email To Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Automatic_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Automatic Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReceivedbyExpertCenter__c</fullName>
        <label>Received by Expert Center</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RelatedProblem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>OCT 2015 Release</description>
        <label>Related Problem</label>
        <referenceTo>Problem__c</referenceTo>
        <relationshipLabel>Technical Expert Assessments</relationshipLabel>
        <relationshipName>Technical_Expert_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReminderContactEmail__c</fullName>
        <formula>IMAGE(&quot;/resource/I2P_InformationLogo&quot;, &quot;warning&quot;, 20, 20) &amp;&apos; &apos; &amp;&quot;Notifications to customers will only be sent in English&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Reminder_ContactEmail&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReminderDate__c</fullName>
        <formula>IF(  OR(ISBLANK(ExpertAssessmentCompleted__c), ISNULL(ExpertAssessmentCompleted__c) ) , ( OpenDate__c +  VALUE( $Label.CLOCT15I2P07)), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <formula>IMAGE(&quot;/resource/I2P_InformationLogo&quot;, &quot;warning&quot;, 20, 20) &amp;&apos; &apos; &amp;&quot; Please complete mandatory information by attaching  the Expert Assessment Templates&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;Reminder !&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Expert_Center_Alignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>R1 2018 release : Expert Center on TEX and Return Center on Parts Order Line are different. Please check if they should be aligned. If the current selection is correct, tick check box &quot;Return/Expert Center Alignment&quot;.</description>
        <inlineHelpText>Expert Center on TEX and Return Center on Parts Order Line should be aligned. Check this box if current selections are correct.</inlineHelpText>
        <label>No Return/Expert Center Alignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendAutomaticEmailToCustomerinEng__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, automatic emails will be sent to the specified contact on product reception at Expert Center, when the assessment is started at the expert center, and when the report is sent to the customer.</inlineHelpText>
        <label>Send Automatic Email To Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShippedFromCustomer__c</fullName>
        <description>I2P Oct 15 Release - BR-7721</description>
        <label>Shipped From Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusReason__c</fullName>
        <label>Status Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Alternate resolution agreed</fullName>
                </value>
                <value>
                    <fullName>Duplicate request</fullName>
                </value>
                <value>
                    <fullName>Issue Misdiagnosed</fullName>
                </value>
                <value>
                    <fullName>Not a customer request</fullName>
                </value>
                <value>
                    <fullName>Parts Left/Lost at customer site</fullName>
                </value>
                <value>
                    <fullName>Parts Lost at SE location</fullName>
                </value>
                <value>
                    <fullName>Product lost in transit</fullName>
                </value>
                <value>
                    <fullName>Product not sent back from customer</fullName>
                </value>
                <value>
                    <fullName>Product received unusable</fullName>
                </value>
                <value>
                    <fullName>Request cancelled by customer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>I2P-RR:Oct2013Release</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product/data collection</fullName>
                </value>
                <value>
                    <fullName>Expert Assessment in Queue</fullName>
                    <default>true</default>
                    <label>Expert Assessment in Queue</label>
                </value>
                <value>
                    <fullName>Expert Assessment in progress</fullName>
                </value>
                <value>
                    <fullName>Front Office review in progress</fullName>
                </value>
                <value>
                    <fullName>Expert Assessment Report Finalized</fullName>
                </value>
                <value>
                    <fullName>Expert Assessment report sent to customer</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubFailureMode__c</fullName>
        <description>Dependent Picklist for Failure Mode</description>
        <inlineHelpText>Identify the sub mode in which the above component is failing.</inlineHelpText>
        <label>Sub Failure Mode</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FailureMode__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>BOM / routing incorrect</fullName>
                </value>
                <value>
                    <fullName>Custom order processed incorrectly</fullName>
                </value>
                <value>
                    <fullName>Delivery done too early</fullName>
                </value>
                <value>
                    <fullName>Delivery done too late</fullName>
                </value>
                <value>
                    <fullName>Documentation or labeling incorrect</fullName>
                </value>
                <value>
                    <fullName>Missing / extra parts</fullName>
                </value>
                <value>
                    <fullName>Packaging is incorrect</fullName>
                </value>
                <value>
                    <fullName>Part selection incorrect</fullName>
                </value>
                <value>
                    <fullName>Adhesion / Blistering</fullName>
                </value>
                <value>
                    <fullName>Burrs / Flashing</fullName>
                </value>
                <value>
                    <fullName>Color or painting is incorrect</fullName>
                </value>
                <value>
                    <fullName>Corrosion / Rust / Water damage</fullName>
                </value>
                <value>
                    <fullName>Cracked / Broken / Deformed</fullName>
                </value>
                <value>
                    <fullName>Foreign substance / Contamination</fullName>
                </value>
                <value>
                    <fullName>Fretting</fullName>
                </value>
                <value>
                    <fullName>Insulation breakdown</fullName>
                </value>
                <value>
                    <fullName>Other appearance failure mode</fullName>
                </value>
                <value>
                    <fullName>Packaging is damaged</fullName>
                </value>
                <value>
                    <fullName>Shape or size is incorrect</fullName>
                </value>
                <value>
                    <fullName>Surface quality is incorrect</fullName>
                </value>
                <value>
                    <fullName>Wiring damaged</fullName>
                </value>
                <value>
                    <fullName>Wiring incorrect</fullName>
                </value>
                <value>
                    <fullName>Angle incorrect</fullName>
                </value>
                <value>
                    <fullName>Camber / Twist / Warp</fullName>
                </value>
                <value>
                    <fullName>Geometry defect / Shape / Alignment</fullName>
                </value>
                <value>
                    <fullName>Size / Diameter / Radius</fullName>
                </value>
                <value>
                    <fullName>Undesired features</fullName>
                </value>
                <value>
                    <fullName>Weld not conforming</fullName>
                </value>
                <value>
                    <fullName>Calibration not possible</fullName>
                </value>
                <value>
                    <fullName>Circuit does not close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_AccountID__c</fullName>
        <formula>if(ISBLANK( Case__r.AssetOwner__c),IF( ISPICKVAL((Case__r.Account.Account_VIPFlag__c), &apos;VIP1&apos;) ,Case__r.AccountId, IF( ISPICKVAL((Case__r.Account.Account_VIPFlag__c), &apos;VIP4&apos;) , Case__r.AccountId, IF( ISPICKVAL((Case__r.Account.Account_VIPFlag__c), &apos;VIP5&apos;) , Case__r.AccountId, &apos;&apos;))),if(Case__r.TECH_RelatedAccountStatus__c = &quot;VIP1&quot;,Case__r.AssetOwner__c, 
if(ISPICKVAL(Case__r.Account.Account_VIPFlag__c, &quot;VIP1&quot;),Case__r.AccountId, 
if(Case__r.TECH_RelatedAccountStatus__c = &quot;VIP1&quot;,Case__r.AssetOwner__c, 
if(ISPICKVAL(Case__r.Account.Account_VIPFlag__c, &quot;VIP1&quot;),Case__r.AccountId, 
if(Case__r.TECH_RelatedAccountStatus__c = &quot;VIP1&quot;,Case__r.AssetOwner__c,if(ISPICKVAL(Case__r.Account.Account_VIPFlag__c, &quot;VIP1&quot;),Case__r.AccountId,&apos;&apos;)))))))</formula>
        <label>TECH_AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_CSIFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TECH_CSIFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_CaseAccount__c</fullName>
        <formula>IF(ISBLANK(Case__c),&apos;&apos;,If(Case__r.Account.RecordType.DeveloperName=&apos;Customer&apos;,Case__r.Account.Name,  Case__r.Account.FirstName +&apos; &apos;+  Case__r.Account.LastName ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_CaseContactName__c</fullName>
        <formula>Case__r.Contact.FirstName+&apos; &apos;+ Case__r.Contact.LastName</formula>
        <label>TECH_CaseContactName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_CaseCreationToTEXCreation__c</fullName>
        <formula>DATEVALUE(CreatedDate)-DATEVALUE(Case__r.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_CaseCreationToTEXCreation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_CaseEmailNotificationContent__c</fullName>
        <formula>IF( NOT(ISPICKVAL( Case__r.Status, &apos;Closed&apos;)), &apos;is still Open as there are still pending actions to be completed.&apos;, &apos;has been automatically closed as this was the last remaining action.&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_CaseEmailNotificationContent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_CaseOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>I2P-RR: OCT2013</description>
        <label>TECH_CaseOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Technical_Expert_Assessments4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TECH_CommercialReference__c</fullName>
        <formula>Case__r.CommercialReference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Commercial Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_ContactEmail__c</fullName>
        <label>TECH_ContactEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TECH_ContactName__c</fullName>
        <formula>IF( NOT(ISBLANK(ContactName__c)), ContactName__c ,  IF( ISBLANK(Case__c),&apos;&apos;, Case__r.Contact.FirstName+&apos; &apos;+ Case__r.Contact.LastName)   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_ContactName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_EAInProgressToFOReview__c</fullName>
        <formula>IF(AND(Not(ISNULL(ExpertAssessmentStarted__c)),Not(ISNULL(ExpertAssessmentCompleted__c))),ExpertAssessmentCompleted__c-ExpertAssessmentStarted__c, null)</formula>
        <label>TECH_EAInProgressToFOReview</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_EAReportFinalizedToEASentToCust__c</fullName>
        <formula>IF(AND(NOT(ISNULL(TEXReportDeliveredtoCustomer__c)),NOT(ISNULL(ExpertAssessmentReviewed__c))),TEXReportDeliveredtoCustomer__c-ExpertAssessmentReviewed__c, Null)</formula>
        <label>TECH_EAReportFinalizedToEASentToCust</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_EASentToCustToClosed__c</fullName>
        <formula>IF(AND(NOT(ISNULL(ClosedDate__c)),NOT(ISNULL(TEXReportDeliveredtoCustomer__c))),ClosedDate__c-TEXReportDeliveredtoCustomer__c, null)</formula>
        <label>TECH_EASentToCustToClosed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_EAStartedToEAInProgress__c</fullName>
        <formula>IF(ISNULL(ExpertAssessmentStarted__c),null , ExpertAssessmentStarted__c-OpenDate__c
)</formula>
        <label>TECH_EAStartedToEAInProgress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_ExpertCenterContactEmail__c</fullName>
        <label>TECH_ExpertCenterContactEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TECH_FOReviewToEAReportFinalized__c</fullName>
        <formula>IF(AND(NOT(ISNULL(ExpertAssessmentReviewed__c)),NOT(ISNULL(ExpertAssessmentCompleted__c))),ExpertAssessmentReviewed__c-ExpertAssessmentCompleted__c, null)</formula>
        <label>TECH_FOReviewToEAReportFinalized</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_IamDiagnosticExpert__c</fullName>
        <formula>IF(  OfferExpert__c  = $User.Id , TRUE , FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IamDiagnosticExpert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_IamFOTexManger__c</fullName>
        <formula>IF(  FrontOfficeTEXManager__c  = $User.Id , TRUE , FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IamFOTexManger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_IamTeamMember__c</fullName>
        <formula>CONTAINS(TECH_TeamMemberIds__c,$User.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_IamTeamMember</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_IsScriptRun__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TECH_IsScriptRun</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_NotificationDate__c</fullName>
        <description>I2P Oct 15 Release</description>
        <label>TECH_NotificationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TECH_PartsOrderLines__c</fullName>
        <label>TECH_PartsOrderLines</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_ProductFamily__c</fullName>
        <formula>Case__r.Family__c</formula>
        <label>TECH_ProductFamily</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_TEXCreationToTEXClosed__c</fullName>
        <formula>IF(NOT(ISNULL(ClosedDate__c)),ClosedDate__c-DATEVALUE(CreatedDate),null)</formula>
        <label>TECH_TEXCreationToTEXClosed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_TEXManagerEmail__c</fullName>
        <formula>FrontOfficeTEXManager__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_TEXManagerEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_TeamMemberIds__c</fullName>
        <label>TECH_TeamMemberIds</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TECH_VIPStatus__c</fullName>
        <description>The field is used in all the email templates subject line .</description>
        <formula>if(VIP_Status__c!=&apos;&apos;,VIP_Status__c+&apos;: &apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_VIPStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEXCycleTime__c</fullName>
        <formula>iF(AND( ISPICKVAL(Status__c, &quot;Closed&quot;), NOT(ISNULL(ClosedDate__c) ) ),ClosedDate__c - DATEVALUE( CreatedDate ),IF(NOT(ISPICKVAL(Status__c, &quot;Closed&quot;)), today() - DATEVALUE(CreatedDate) , 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TEX Cycle Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEXIcons__c</fullName>
        <formula>TEX_VipFlag__c &amp;&apos; &apos;&amp;  Case__r.CMIImage__c &amp;&apos; &apos;&amp; PotentialSafetyIssue__c</formula>
        <label>TEX Icons</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEXPOLWarningMessage__c</fullName>
        <description>R1 2018 release : Warning message displayed when Expert Center on TEX is different from Return Center on Parts Order Line</description>
        <formula>IF( NOT( ISBLANK( Parts_Order_Line_Return_Center__c )) , IF( CASESAFEID(ExpertCenter__c)  &lt;&gt;  Parts_Order_Line_Return_Center__c &amp;&amp;  Return_Expert_Center_Alignment__c == FALSE,  IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &apos;Warning Message&apos;) &amp; &apos; &apos; &amp; &apos;Expert Center on TEX and Return Center on Parts Order Line are different. Please check if they should be aligned. If the current selection is correct, tick check box &quot;No Return/Expert Center Alignment&quot;.&apos;  , &apos;&apos;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;TEXPOLWarningMessage&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEXReportDeliveredtoCustomer__c</fullName>
        <label>TEX Report Delivered to Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TEX_VipFlag__c</fullName>
        <formula>IF(ISBLANK(Case__c),&apos;&apos;,   
    IF(
        OR(
            ISPICKVAL(Case__r.Account.Account_VIPFlag__c, &quot;VIP1&quot;),
            Case__r.TECH_RelatedAccountStatus__c = &quot;VIP1&quot;
        ), IMAGE(&quot;/resource/STR_ACC_VIPGold&quot;, &quot;VIP Gold&quot;, 20, 31),
        IF(
            OR(
                ISPICKVAL(Case__r.Account.Account_VIPFlag__c, &quot;VIP4&quot;),
                Case__r.TECH_RelatedAccountStatus__c = &quot;VIP4&quot;
            ), IMAGE(&quot;/resource/VIPOEM&quot;, &quot;VIP OEM&quot;, 20, 31),
            IF(
                OR(
                    ISPICKVAL(Case__r.Account.Account_VIPFlag__c, &quot;VIP5&quot;),
                    Case__r.TECH_RelatedAccountStatus__c = &quot;VIP5&quot;
                ), IMAGE(&quot;/resource/VIPCTA&quot;, &quot;VIP CTA&quot;, 20, 31),
				IF(
					OR(
						ISPICKVAL(Case__r.Account.Account_VIPFlag__c, &quot;VIP6&quot;),
						Case__r.TECH_RelatedAccountStatus__c = &quot;VIP6&quot;
					), IMAGE(&quot;/resource/VIPMCTA&quot;, &quot;VIP MCTA&quot;, 20, 31),&apos;&apos;         
				)
			)
        )
    )
)</formula>
        <label>&lt;VIPIcon&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Am_DiagEx_FOTexMng_Team_member__c</fullName>
        <formula>IF(TECH_IamFOTexManger__c,&apos;Front Office TEX Manage as me&apos;,IF(TECH_IamDiagnosticExpert__c,&apos;Diagnostic Expert as me&apos;,IF(TECH_IamTeamMember__c,&apos;Team Member as me&apos;,null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Diagnostic Expert/FOTexMng/Team-member</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpdatedPromiseDate__c</fullName>
        <label>Updated Promise Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VIPStatus__c</fullName>
        <label>TECH_Initial VIP Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIP_Status__c</fullName>
        <description>OCT 2015 Release</description>
        <formula>IF( ISBLANK( Case__c ) ,&apos;&apos;, 
IF(
OR(
ISPICKVAL(Case__r.Account.Account_VIPFlag__c, &quot;VIP1&quot;),
Case__r.TECH_RelatedAccountStatus__c = &quot;VIP1&quot;
), $Label.CLR617I2P01,
IF(
OR(
ISPICKVAL(Case__r.Account.Account_VIPFlag__c, &quot;VIP4&quot;),
Case__r.TECH_RelatedAccountStatus__c = &quot;VIP4&quot;
), $Label.CLR617I2P02,
IF(
OR(
ISPICKVAL(Case__r.Account.Account_VIPFlag__c, &quot;VIP5&quot;),
Case__r.TECH_RelatedAccountStatus__c = &quot;VIP5&quot;
), $Label.CLR617I2P03, 
IF(
OR(
ISPICKVAL(Case__r.Account.Account_VIPFlag__c, &quot;VIP6&quot;),
Case__r.TECH_RelatedAccountStatus__c = &quot;VIP6&quot;
), &quot;VIP MCTA&quot;, &apos;&apos;
)
)
)
))</formula>
        <label>VIP Status</label>
        <type>Text</type>
    </fields>
    <label>Technical Expert Assessment</label>
    <listViews>
        <fullName>AT_Open_TEX1</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Case__c</columns>
        <columns>AffectedOffer__c</columns>
        <columns>TECH_CaseAccount__c</columns>
        <columns>ContactName__c</columns>
        <columns>OpenDate__c</columns>
        <columns>CustomerWait__c</columns>
        <columns>Material_Status__c</columns>
        <columns>FrontOfficeTEXManager__c</columns>
        <columns>FrontOfficeTEXReviewer__c</columns>
        <columns>FrontOfficeOrganization__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FrontOfficeOrganization__c</field>
            <operation>equals</operation>
            <value>Europe Operations - DACH - Switzerland</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <label>AT_Open TEX</label>
        <language>en_US</language>
        <sharedTo>
            <group>AT_Quality</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AUT_TEX_requests</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>AssessmentType__c</columns>
        <columns>FrontOfficeOrganization__c</columns>
        <columns>Product_Line__c</columns>
        <columns>AffectedOffer__c</columns>
        <columns>ExpertCenter__c</columns>
        <columns>OpenDate__c</columns>
        <columns>ClosedDate__c</columns>
        <columns>CustomerWait__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>FrontOfficeTEXManager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Line__c</field>
            <operation>equals</operation>
            <value>INENP - IED ELEC NETWORKS PROT,INENP - AED ELEC NETWORKS PROT</value>
        </filters>
        <filters>
            <field>Product_Line__c</field>
            <operation>equals</operation>
            <value>INENS - ELECT.NETWORKS SOL.,INENS - ELEC NETW CONTROL SOL</value>
        </filters>
        <filters>
            <field>Product_Line__c</field>
            <operation>equals</operation>
            <value>SIELE - SMART INFRA ELECTRIC U,SIELE - GRID AUTOMATION SOL.</value>
        </filters>
        <filters>
            <field>ExpertCenter__c</field>
            <operation>startsWith</operation>
            <value>Energy - Automation</value>
        </filters>
        <label>ENE-AUT-TEX</label>
        <language>en_US</language>
        <sharedTo>
            <group>ENE_AUT_Views</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_TEX_All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Material_Status__c</columns>
        <columns>TEX_VipFlag__c</columns>
        <columns>TECH_CaseAccount__c</columns>
        <columns>TECH_CommercialReference__c</columns>
        <columns>Case__c</columns>
        <columns>CustomerWait__c</columns>
        <columns>DaysSpentOnAssessment__c</columns>
        <columns>ExpertAssessmentStarted__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FrontOfficeOrganization__c</field>
            <operation>contains</operation>
            <value>belgium</value>
        </filters>
        <label>BE TEX - All</label>
        <language>en_US</language>
        <sharedTo>
            <group>BE_Quality</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_TEX_Open</fullName>
        <columns>NAME</columns>
        <columns>TECH_CommercialReference__c</columns>
        <columns>Case_Subject__c</columns>
        <columns>Status__c</columns>
        <columns>TECH_CaseAccount__c</columns>
        <columns>TEX_VipFlag__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Prioritylevel__c</columns>
        <columns>AssessmentType__c</columns>
        <columns>DaysSpentOnAssessment__c</columns>
        <columns>DateofReportofDelivery__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OfferExpert__c</columns>
        <columns>ExpertCenter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FrontOfficeOrganization__c</field>
            <operation>contains</operation>
            <value>belgium</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Front Office review in progress</value>
        </filters>
        <label>BE TEX - Front office review in progress</label>
        <language>en_US</language>
        <sharedTo>
            <group>GSC_EMEA_Product_Retail_EC</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Baltic_TEX</fullName>
        <columns>NAME</columns>
        <columns>TECH_CaseAccount__c</columns>
        <columns>Case__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>ClosedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FrontOfficeOrganization__c</field>
            <operation>contains</operation>
            <value>Northern Europe - Baltic countries (Est,Lat,Lith)</value>
        </filters>
        <label>Baltic TEX - ALL</label>
        <language>en_US</language>
        <sharedTo>
            <group>EECustomerCareGroup</group>
            <group>LTCustomerCareGroup</group>
            <group>LVCustomerCareGroup</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CH_SE_TEX</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Product_Line__c</columns>
        <columns>AffectedOffer__c</columns>
        <columns>TECH_CaseAccount__c</columns>
        <columns>ExpertAssessmentCompleted__c</columns>
        <columns>Prioritylevel__c</columns>
        <columns>AssessmentType__c</columns>
        <columns>Material_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FrontOfficeOrganization__c</field>
            <operation>contains</operation>
            <value>Europe Operations - DACH - Switzerland</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <label>CH-SE TEX Open</label>
        <language>en_US</language>
        <sharedTo>
            <group>CH_Quality</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CH_SE_TEX_Closed</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Product_Line__c</columns>
        <columns>TECH_CaseAccount__c</columns>
        <columns>AffectedOffer__c</columns>
        <columns>ExpertAssessmentCompleted__c</columns>
        <columns>Prioritylevel__c</columns>
        <columns>AssessmentType__c</columns>
        <columns>Material_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FrontOfficeOrganization__c</field>
            <operation>contains</operation>
            <value>Europe Operations - DACH - Switzerland</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <label>CH-SE TEX Closed</label>
        <language>en_US</language>
        <sharedTo>
            <group>CH_Quality</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CZ_SK_TEX_Closed_Cancelled</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>AssessmentType__c</columns>
        <columns>FrontOfficeOrganization__c</columns>
        <columns>AffectedOffer__c</columns>
        <columns>ExpertCenter__c</columns>
        <columns>OpenDate__c</columns>
        <columns>ClosedDate__c</columns>
        <columns>CustomerWait__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>FrontOfficeTEXManager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Matejckova</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <label>CZ&amp;SK_TEX - Closed / Cancelled</label>
        <language>en_US</language>
        <sharedTo>
            <group>CZCustomerCareGroup</group>
            <group>CZGlobalsalesperformance</group>
            <group>CZ_ALL_USERS</group>
            <group>CZ_SK_All_Users</group>
            <group>CZ_SK_All_sales_users</group>
            <group>CZ_SK_CCC</group>
            <group>CZ_SK_I2P</group>
            <group>CZ_SK_Lead_Management</group>
            <group>CZ_SK_MKT</group>
            <group>CZ_SK_Non_Sales_Users</group>
            <group>CZ_sales_users</group>
            <group>SKCustomerCareGroup</group>
        </sharedTo>
    </listViews>
</CustomObject>